# esteid-pkcs11

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CardManager.h  EstEIDCardAdapter.h  Logger.cpp  Logger.h  OnePinPKCS11Context.cpp  OnePinPKCS11Context.h  PKCS11Context.cpp  PKCS11Context.h  README.md  README.txt  RELEASE-NOTES.txt  Setup.h  build.bat  esteidpkcs11.cpp  esteidpkcs11.rc  precompiled.cpp  precompiled.h  svn.externals  version.rc
debian/: changelog  control  esteid-pkcs11.lintian-overrides  rules
esteid-pkcs11-test/: C_GetInfo_Test.cpp  READ.ME  esteid-pkcs11-test.cpp  esteid-pkcs11-test.h  igor_X0010119.cfg  main.cpp  mariliis_AS3500006.cfg  run_parallel.sh
esteid-pkcs11.xcodeproj/: project.pbxproj  testmac.mode1v3  testmac.pbxuser
esteid-pkcs11.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
esteid-pkcs11.xcodeproj/project.xcworkspace/xcuserdata/xp.xcuserdatad/: UserInterfaceState.xcuserstate
esteid-pkcs11.xcodeproj/xcuserdata/xp.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  esteid-pkcs11.xcscheme  install.xcscheme  smartcardpp.xcscheme  xcschememanagement.plist
unit tests/: LoggerTest.cpp  OnePinPKCS11Context_C_GetSlotInfo_Test.cpp  OnePinPKCS11Context_C_GetSlotList_Test.cpp  PKCS11Context_C_DecryptInit_Test.cpp  PKCS11Context_C_Decrypt_Test.cpp  PKCS11Context_C_GetInfo_Test.cpp  PKCS11Context_C_GetMechanismInfo_Test.cpp  PKCS11Context_C_GetMechanismList_Test.cpp  PKCS11Context_C_GetSlotInfo_Test.cpp  PKCS11Context_C_GetSlotList_Test.cpp  PKCS11Context_C_GetTokenInfo_Test.cpp  PKCS11Context_C_InitToken_Test.cpp  PKCS11Context_C_Login_Test.cpp  PKCS11Context_C_OpenSession_Test.cpp  PKCS11Context_C_SignFinal_Test.cpp  PKCS11Context_C_SignInit_Test.cpp  PKCS11Context_C_Sign_Test.cpp  TestCardAdapter.h  esteid-unit-test.cpp  esteid-unit-test.h  main.cpp
utility/: CMakeLists.txt  EstEID_utility.cpp  EstEID_utility.h  asnCertificate.cpp  asnCertificate.h  asnObject.cpp  asnObject.h  pkcs11module.cpp  pkcs11module.h  precompiled.h
